REGRESSION(r109729) [Form] Rendering of select/optgroup/option combination is too slow. https://bugs.webkit.org/show_bug.cgi?id=88059

Reviewed by Kent Tamura.

This patch changes to share RenderStyle object among the "option"
elements to improve rendering performance and reducing memory usage
of RenderStyle.

No new tests. This patch doesn't change behavior but rendering performance.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::canShareStyleWithElement): Check attribute value
mismatching for "option" element.


Canonical link: https://commits.webkit.org/105892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119213 268f45cc-cd09-0410-ab3c-d52691b4dbfc